ncc/testsuite/positive/null-match.n
using Nemerle.IO;
module M {
  variant x { | A | B }
  
  public Main () : void {
    try {
      match (null) {
        | x.A => ()
        | x.B => ()
      }
    } catch { _ : NullMatchException => printf ("OK\n") }
  }
}

/*
BEGIN-OUTPUT
OK
END-OUTPUT
*/
